# screencat

./: .gitignore  .travis.yml  Cargo.toml  README.md
scripts/: before_deploy.sh  build.sh
src/: errors.rs  fs_watcher.rs  lib.rs  main.rs
