[package]
name = "screencat"
version = "1.1.2"
description = "Screenshot auto-uploader with Sendcat"
authors = ["Josh Lindsey <joshua.s.lindsey@gmail.com>"]
license = "GPL-3.0-or-later"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false

[dependencies]
notify = "4.0.3"
error-chain = "0.11"
regex = "0.2"
rand = "0.4.2"
log = "0.4"
env_logger = "0.5.4"
chrono = "0.4"
shellexpand = "1"
clap = "2"
clipboard = "0.4.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
